<resources>
	<string name="app_name">Sale Waypoint</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Sale Waypoint</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="action_search">Search</string>
	<string name="about">About this game</string>
	<string name="listings">Price listings</string>
	<string name="temp_terraria_text">Dig, Fight, Explore, Build: The very world is at your fingertips as you fight for survival, fortune, and glory. Will you delve deep into cavernous expanses in search of treasure and raw materials with which to craft ever-evolving gear, machinery, and aesthetics? Perhaps you will choose instead to seek out ever-greater foes to test your mettle in combat? Maybe you will decide to construct your own city to house the host of mysterious allies you may encounter along your travels?</string>

	<string name="menu_home">Home</string>
	<string name="menu_gallery">Gallery</string>
	<string name="menu_slideshow">Slideshow</string>

	<string name="nav_all">All Games</string>
    <string name="nav_wishlist">Wishlist</string>
	<string name="nav_sales">What\'s on sale</string>
	<string name="nav_search">Search</string>
	<string name="nav_stores">Stores</string>
    <string name="nav_steam">Steam</string>
	<string name="nav_playstation">PlayStation</string>
	<string name="nav_xbox">Xbox</string>
	<string name="nav_nintendo">Nintendo</string>
	<string name="nav_itch">Itch</string>
	<string name="logout">Logout</string>
	<string name="settings">Settings</string>
	<string name="store_icon">StoreIcon</string>
	<string name="add_a_game">Add a game</string>
    <string name="sign_in">Sign In</string>
    <string name="title">Title</string>
	<string name="add_a_title">Add a title</string>
	<string name="add_about">About</string>
	<string name="describe_the_game">Describe the game...</string>
	<string name="add_store">Store</string>
	<string name="add_enabled">Enabled</string>
	<string name="add_price">Price ($)</string>
	<string name="add_sale">Sale (%)</string>
	<string name="default_price">$99.99</string>
	<string name="add_price_hint">00.00</string>
	<string name="add_sale_hint">00</string>
	<string name="add_store_icon">Store Icon</string>
	<string name="developer">Developer</string>
	<string name="add_a_developer">Add a developer</string>
	<string name="edit_this_game">Edit this game</string>
	<string name="image_url">Image URL</string>
	<string name="image">Image</string>
	<string name="loading">Loading</string>
	<string name="no_image">No Image</string>
</resources>