<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@color/colorSaleBanner">


    <TextView
    android:id="@+id/add_title"
    style="@style/AddHeaders"
    android:text="@string/title"/>

    <EditText
        android:id="@+id/add_title_text"
        style="@style/AddEditText"
        android:layout_below="@id/add_title"
        android:paddingTop="10dp"
        android:hint="@string/add_a_title"
        android:inputType="textCapWords"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/add_developer"
        style="@style/AddHeaders"
        android:text="@string/developer"
        android:layout_below="@id/add_title_text"/>

    <EditText
        android:id="@+id/add_developer_text"
        style="@style/AddEditText"
        android:layout_below="@id/add_developer"
        android:paddingTop="10dp"
        android:hint="@string/add_a_developer"
        android:inputType="textCapWords"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/add_description"
        style="@style/AddHeaders"
        android:text="@string/add_about"
        android:layout_below="@id/add_developer_text"/>

    <EditText
        android:id="@+id/add_description_text"
        style="@style/AddEditText"
        android:layout_below="@id/add_description"
        android:paddingTop="10dp"
        android:hint="@string/describe_the_game"
        android:autofillHints=""
        android:inputType="textMultiLine|textCapSentences"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_description_text"
        android:orientation="vertical">

        <!--Table Headers-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/AddTableHeader"
                android:text="@string/add_store"
                android:layout_weight="8"/>

            <TextView
                style="@style/AddTableHeader"
                android:text="@string/add_enabled"
                android:layout_weight="10"/>

            <TextView
                style="@style/AddTableHeader"
                android:text="@string/add_price"
                android:layout_weight="15"/>

            <TextView
                style="@style/AddTableHeader"
                android:text="@string/add_sale"
                android:layout_weight="15"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <!--Steam Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_steam"
                android:layout_weight="8"
                app:tint="@color/colorTextPrimary"
                android:contentDescription="@string/add_store_icon" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/add_enabled_steam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/colorSale"
                    android:backgroundTint="@color/colorSale"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/add_price_steam"
                style="@style/AddTableEditText"
                android:layout_weight="15"
                android:inputType="numberDecimal"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/add_sale_steam"
                style="@style/AddTableEditText"
                android:layout_weight="15"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <!--PlayStation Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_playstation"
                android:layout_weight="8"
                app:tint="@color/colorTextPrimary"
                android:contentDescription="@string/add_store_icon" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/add_enabled_playstation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/colorSale"
                    android:backgroundTint="@color/colorSale"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/add_price_playstation"
                style="@style/AddTableEditText"
                android:layout_weight="15"
                android:inputType="numberDecimal"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/add_sale_playstation"
                style="@style/AddTableEditText"
                android:layout_weight="15"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <!--Xbox Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_xbox"
                android:layout_weight="8"
                app:tint="@color/colorTextPrimary"
                android:contentDescription="@string/add_store_icon" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/add_enabled_xbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/colorSale"
                    android:backgroundTint="@color/colorSale"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/add_price_xbox"
                style="@style/AddTableEditText"
                android:layout_weight="15"
                android:inputType="numberDecimal"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/add_sale_xbox"
                style="@style/AddTableEditText"
                android:layout_weight="15"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <!--Nintendo Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_nintendo"
                android:layout_weight="8"
                app:tint="@color/colorTextPrimary"
                android:contentDescription="@string/add_store_icon" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/add_enabled_nintendo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/colorSale"
                    android:backgroundTint="@color/colorSale"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/add_price_nintendo"
                style="@style/AddTableEditText"
                android:layout_weight="15"
                android:inputType="numberDecimal"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/add_sale_nintendo"
                style="@style/AddTableEditText"
                android:layout_weight="15"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <!--Itch Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_itch"
                android:layout_weight="8"
                app:tint="@color/colorTextPrimary"
                android:contentDescription="@string/add_store_icon" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/add_enabled_itch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/colorSale"
                    android:backgroundTint="@color/colorSale"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/add_price_itch"
                style="@style/AddTableEditText"
                android:layout_weight="15"
                android:inputType="numberDecimal"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/add_sale_itch"
                style="@style/AddTableEditText"
                android:layout_weight="15"
                android:inputType="number"
                android:autofillHints=""
                tools:ignore="LabelFor" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
</ScrollView>